<resources>
    <string name="app_name">Recipe</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign up</string>
    <string name="email_or_username">"Email or User "</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="forget_password">Forget Password</string>
    <string name="confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="create">Create</string>
    <string name="account">Account</string>
    <string name="see_the_recipe">See the recipe</string>
    <string name="healthy_weeknight_dinners">Healthy Weeknight Dinners</string>
    <string name="what_we_re_loving_now">What We\'re Loving Now</string>
    <string name="todo">TODO</string>
    <string name="trending">Trending</string>
    <string name="grillin_chillin">Grillin\' + Chillin\'</string>
    <string name="drinks">Drinks</string>
    <string name="recommend">Recommend</string>
    <string name="avatar">avatar</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="change_password">Change Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="directions">Directions</string>
    <string name="ingredients">Ingredients</string>
    <string name="recipe_names">Recipe names</string>
    <string name="search_here">Search here</string>
    <string name="update_recipe">Update Recipe</string>
    <string name="recipe_image">Recipe Image</string>
</resources>