<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragment.account.ChangePasswordFragment">

    <EditText
        android:id="@+id/currentPassword"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edt_border"
        android:hint="@string/current_password"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingEnd="20dp" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edt_border"
        android:hint="@string/new_password"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingEnd="20dp" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edt_border"
        android:hint="@string/confirm_password"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingEnd="20dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dps10"
        android:background="@drawable/border_btn"
        android:paddingStart="@dimen/dps10"
        android:paddingEnd="@dimen/dps10"
        android:text="@string/change_password"
        android:textColor="@color/white" />


</LinearLayout>